# axum-boilerplate

./: Cargo.nix  Cargo.toml  LICENSE  diesel.toml  docker-compose.yml  env_example  flake.nix  init-test-db.sh
migrations/2026-02-15-060744_create_goals/: down.sql  up.sql
migrations/2026-03-11-211118-0000_create_applied_goals/: down.sql  up.sql
src/db/: mod.rs  models.rs  schema.rs
src/db/models/: applied_goal.rs  goal.rs  mod.rs  user.rs
src/webapp/: handlers.rs  mod.rs  state.rs
src/webapp/handlers/: calendar.rs  goal.rs  middleware.rs  mod.rs
src/webapp/sso/: google_sso.rs  microsoft_sso.rs  mod.rs
src/webapp/templates/: bootstrap.html  calendar.html  error.html  goal-form.html  goals.html  home.html  layout.html  login.html  navbar.html
src/webapp/templates/fragments/: calendar-content.html  goal-detail.html  goal-form.html  goal-table.html  goals-table.html  navbar.html
src/webapp/templates/mockups/: bootstrap.html
tests/: database.rs  mod.rs
