[package]
name = "axum-boilerplate"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie-private"] }
bcrypt = "0.17.1"
chrono = "0.4.41"
clap = { version = "4.5.47", features = ["derive", "string", "cargo"] }
diesel = { version = "2.3.1", features = [
  "chrono", 
  "postgres", 
  "r2d2",
  "serde_json",
] }
diesel_migrations = { version = "2.3.1", features = ["postgres"] }
dotenvy = "0.15.7"
duckdb = { version = "=1.2", features = ["polars"] }
email_address = "0.2.9"
env_logger = "0.11.8"
include_dir = "0.7.4"
lazy_static = "1.5.0"
mime_guess = "2.0.5"
# minijinja = "2.11.0"
openidconnect = { version = "4.0.1", features = [
    "reqwest-blocking",
    "accept-string-booleans", # for email_verified field
] }
polars = { version = "0.46", features = [
    "lazy", 
    "parquet", 
    "pivot",
    "temporal", 
] }
polars-core = "0.46"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
tera = "1"
termion = "4.0.5"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.3", features = ["tracing"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.7"
validator = { version = "0.20.0", features = ["derive"] }
vega_lite_4 = { version = "0.8.1", features = ["polars"] }
